# setup_powershell

./: CONTRIBUTING.md  CUSTOMIZATION.md  Cargo.toml  FEATURES.md  INSTALLATION.md  README.md  TROUBLESHOOTING.md  USAGE.md
docs/: ARCHITECTURE.md  PROFILE_REFERENCE.md
src/: lib.rs  main.rs
src/application/: mod.rs  setup_service.rs
src/cli/: mod.rs  setup_cli.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs  preset.rs  profile.rs
src/domain/interfaces/: downloader.rs  installer.rs  mod.rs  profile_writer.rs  shell.rs  terminal_config.rs
src/infrastructure/: mod.rs
src/infrastructure/filesystem/: mod.rs  profile_fs_writer.rs
src/infrastructure/installers/: font_installer.rs  fzf_installer.rs  mod.rs  module_installer.rs  oh_my_posh_installer.rs  pwsh_installer.rs
src/infrastructure/network/: http_downloader.rs  mod.rs
src/infrastructure/shell/: mod.rs  powershell_runner.rs
src/infrastructure/terminal/: mod.rs  windows_terminal_config.rs
