[package]
name = "setup_powershell"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["stream"] }
anyhow = "1.0.101"
thiserror = "2.0.18"
futures-util = "0.3.31"
dirs = "6.0.0"
colored = "3.1.1"
dialoguer = "0.12.0"
