[package]
name = "setup_powershell"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
colored = "3.1.1"
dialoguer = "0.12.0"
dirs = "6.0.0"
futures-util = "0.3.31"
reqwest = { version = "0.13.2", features = ["stream"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
typed-builder = "0.23.2"
